# ChordChart

./: CMakeLists.txt  main.cpp  main.h
components/chord-chart/: chordChart.cpp  chordChart.h
components/cof/: cof.cpp  cof.h
components/primitiveShapes/: circle.cpp  cone.cpp  rect.cpp
models/: chords.cpp  chords.h  scales.cpp  scales.h
primitiveShapes/: circle.cpp  circle.h  cone.cpp  cone.h  rect.cpp  shape.h
